@@ -1,3 +1,6 @@
+# 2023/02/01
+- More attempts at bard clicky issues
+
 # 2023/01/31
 - Longer delay after stopcast before using clickies on bard
 - Remove dup DMZ zone id list
